Linking to first release

--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
   <title>Budaörsi Antiochia Dalgyűjteménye</title>
 </head>
 <body>
-  Ez egy teszt. A dalgyűjtemény elérhető
-  <a href="http://example.com">itt</a> és <a href="http://google.com">itt</a>...
+  <h1>Budaörsi Antiochia Dalgyűjtemény</h1>
+  <h3>
+    A füzet digitális verziói elérhetőek itt:
+    <a href="https://github.com/Isti115/budaorsi-antiochia-dalgyujtemeny/releases/tag/1.0">
+      https://github.com/Isti115/budaorsi-antiochia-dalgyujtemeny/releases/tag/1.0
+    </a>
+  </h3>
 </body>
 </html>
