Better download page

--- a/index.html
+++ b/index.html
@@ -1,16 +1,70 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="hu">
+
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, shrink-to-fit=no" />
+  <meta name="keywords" content="budaörs, antiochia, daloskönyv, énekeskönyv, dal, gitár, ének, szöveg, akkord" />
+
   <title>Budaörsi Antiochia Dalgyűjteménye</title>
+
+  <link rel="stylesheet" href="./index.css" />
 </head>
+
 <body>
-  <h1>Budaörsi Antiochia Dalgyűjtemény</h1>
-  <h3>
-    A füzet digitális verziói elérhetőek itt:
-    <a href="https://github.com/Isti115/budaorsi-antiochia-dalgyujtemeny/releases/tag/1.0">
-      https://github.com/Isti115/budaorsi-antiochia-dalgyujtemeny/releases/tag/1.0
+  <!-- <a id="github-link" href="https://github.com/Isti115/budaorsi-antiochia-dalgyujtemeny/">
+    <img id="github-image" src="./images/github.svg" />
+  </a> -->
+  <h1>
+    Budaörsi Antiochia Dalgyűjtemény
+  </h1>
+
+  <div class="container">
+    <img id="logo" src="./images/songbook-logo.png" />
+
+    <div id="downloads">
+      <h2>1. kiadás</h2>
+
+      <a href="https://github.com/Isti115/budaorsi-antiochia-dalgyujtemeny/releases/download/1.0/budaorsi-antiochia-dalgyujtemeny_lyric_v1.pdf">
+        <div class="download">
+          <img src="./images/spiral-book-lyrics.png" />
+          <span>Szöveges <br /> verzió</span>
+        </div>
+      </a>
+
+      <a href="https://github.com/Isti115/budaorsi-antiochia-dalgyujtemeny/releases/download/1.0/budaorsi-antiochia-dalgyujtemeny_chord_v1.pdf">
+        <div class="download">
+          <img src="./images/spiral-book-guitar.png" />
+          <span>Akkordos <br /> verzió</span>
+        </div>
+      </a>
+    </div>
+  </div>
+
+  <p class="footnote">
+    <hr />
+    Régebbi kiadások elérhetőek itt:
+    <br />
+    <a href="https://github.com/Isti115/budaorsi-antiochia-dalgyujtemeny/releases">
+      https://github.com/Isti115/budaorsi-antiochia-dalgyujtemeny/releases
     </a>
-  </h3>
+  </p>
+
+  <p class="footnote">
+    <hr />
+    Észrevételeket örömmel fogadok az
+    <br />
+    <a href="mailto:istvan.donko@gmail.com">istvan.donko@gmail.com</a>
+    email címen.
+
+    <!--<br />
+
+    [Vagy akár GitHub issue-ként itt:
+    <br />
+    <a href="https://github.com/Isti115/budaorsi-antiochia-dalgyujtemeny/issues">
+      https://github.com/Isti115/budaorsi-antiochia-dalgyujtemeny/issues
+    </a>] -->
+  </p>
 </body>
+
 </html>
