Added download button

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, shrink-to-fit=no" />
   <meta name="keywords" content="budaörs, antiochia, daloskönyv, énekeskönyv, dal, gitár, ének, szöveg, akkord" />
 
-  <title>Budaörsi Antiochia Dalgyűjteménye</title>
+  <title>Budaörsi Antiochia Dalgyűjtemény</title>
 
   <link rel="stylesheet" href="./index.css" />
 </head>
@@ -28,14 +28,26 @@
       <a href="https://github.com/Isti115/budaorsi-antiochia-dalgyujtemeny/releases/download/1.0/budaorsi-antiochia-dalgyujtemeny_lyric_v1.pdf">
         <div class="download">
           <img src="./images/spiral-book-lyrics.png" />
-          <span>Szöveges <br /> verzió</span>
+          <div>
+            Szöveges
+            <br />
+            verzió
+            <br />
+            <img src="./images/download.png" />
+          </div>
         </div>
       </a>
 
       <a href="https://github.com/Isti115/budaorsi-antiochia-dalgyujtemeny/releases/download/1.0/budaorsi-antiochia-dalgyujtemeny_chord_v1.pdf">
         <div class="download">
           <img src="./images/spiral-book-guitar.png" />
-          <span>Akkordos <br /> verzió</span>
+          <div>
+              Akkordos
+              <br />
+              verzió
+              <br />
+              <img src="./images/download.png" />
+            </div>
         </div>
       </a>
     </div>
